Mon Jun 27 10:05:48 EDT 2005	JK Lowden <jklowden@schemamania.org>
	* doc/dblib_errors.txt fixed error severity table

Mon Jun 27 09:30:02 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/tds/query.c:
	- typo fixes
	- rename tds_next_placeholders to tds_next_placeholder

Mon Jun 27 07:07:59 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c src/odbc/unittests/array.c: comments added

Sun Jun 26 10:22:15 EDT 2005	JK Lowden <jklowden@schemamania.org>
	* tds.dox doc/api_status.txt
	* include/sybdb.dox.h include/sybdb.h
	* src/dblib/bcp.c src/dblib/dblib.c src/dblib/rpc.c
	* src/replacements/iconv.c
	* src/tds/convert.c src/tds/iconv.c src/tds/query.c src/tds/token.c
	- Documentation improvements, mostly.  Cf. Doxygen output.  

Wed Jun 22 20:33:38 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/apps/bsqldb.c src/apps/defncopy.c src/ctlib/ctutil.c:
	- remove warnings

Wed Jun 22 10:21:17 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/ctlib/blk.c: remove warning compiling under gcc4

Tue Jun 21 22:50:20 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/query.c: updated comments

Mon Jun 20 08:34:00 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* acinclude.m4: do not suggest openssl for SSL support
	* src/ctlib/ct.c: small optimization

Sun Jun 19 01:44:59 EDT 2005	JK Lowden <jklowden@schemamania.org>
	* tds.dox doc/api_status.txt
	* include/sybdb.h include/sybdb.dox.h  src/dblib/dblib.c
	- Documentation fixes.  Added lowercase macros to define
	- as Microsoft does. 

Fri Jun 17 10:27:24 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/query.c:
	- fix typo
	- remove useless comments

Thu Jun 16 23:58:05 EDT 2005	JK Lowden <jklowden@schemamania.org>
	* src/tds/query.c added tds_put_n_as_ucs2, removed USC2 data

Mon Jun 13 22:39:04 EDT 2005	JK Lowden <jklowden@schemamania.org>
	* src/dblib/rpc.c added better Doxygen comments
