@@ -1,3 +1,7 @@
+Mon Jun 27 16:46:57 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
+	* src/odbc/odbc.c src/odbc/unittests/array_out.c:
+	- fix array_out test
+
 Mon Jun 27 10:05:48 EDT 2005	JK Lowden <jklowden@schemamania.org>
 	* doc/dblib_errors.txt fixed error severity table
 
